# ZeSolver

./: .AGENT.md.kate-swp  .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  NOTICE.md  README.md  benchmark_report.csv  benchmark_report.json  firstrun.txt  followup.md  install.ps1  memory.md  nono_handoff.md  pyproject.toml  reports_cleanup_candidates_20260627_020935.txt  reports_cleanup_manifest_20260627_020935.txt  requirements.txt  structure.txt  zedatabase..py  zeindexcheck.py  zesolver.py  zewcscleaner.py
ASTAP-main/: astap_linux_amd64.lpi  astap_linux_cross_compile_to_Darwin_M1.lpi
config/: zeblind_4d_experimental_manifest.json
dataset_test/: .zemosaic_eqmode_cache.json  Light_mosaic_M 31_10.0s_LP_20250114-210704.fit  Light_mosaic_M 31_10.0s_LP_20250114-210715.fit  Light_mosaic_M 31_10.0s_LP_20250114-210751.fit  Light_mosaic_M 31_10.0s_LP_20250114-210813.fit  Light_mosaic_M 31_10.0s_LP_20250114-210848.fit  Light_mosaic_M 31_10.0s_LP_20250114-210945.fit  Light_mosaic_M 31_10.0s_LP_20250114-211116.fit  Light_mosaic_M 31_10.0s_LP_20250114-211127.fit  Light_mosaic_M 31_10.0s_LP_20250114-211315.fit  Light_mosaic_M 31_10.0s_LP_20250114-211400.fit  Light_mosaic_M 31_10.0s_LP_20250114-211756.fit  Light_mosaic_M 31_10.0s_LP_20250114-211808.fit  Light_mosaic_M 31_10.0s_LP_20250114-211841.fit  Light_mosaic_M 31_10.0s_LP_20250114-211905.fit  Light_mosaic_M 31_10.0s_LP_20250114-211917.fit  Light_mosaic_M 31_10.0s_LP_20250114-211941.fit  Light_mosaic_M 31_10.0s_LP_20250114-212210.fit  Light_mosaic_M 31_10.0s_LP_20250114-212222.fit  Light_mosaic_M 31_10.0s_LP_20250114-212246.fit  Light_mosaic_M 31_10.0s_LP_20250114-212258.fit  Light_mosaic_M 31_10.0s_LP_20250114-212333.fit  Light_mosaic_M 31_10.0s_LP_20250114-212345.fit  Light_mosaic_M 31_10.0s_LP_20250114-212420.fit  Light_mosaic_M 31_10.0s_LP_20250114-212431.fit  Light_mosaic_M 31_10.0s_LP_20250114-212506.fit  Light_mosaic_M 31_10.0s_LP_20250114-212518.fit  Light_mosaic_M 31_10.0s_LP_20250114-212544.fit  Light_mosaic_M 31_10.0s_LP_20250114-212608.fit  Light_mosaic_M 31_10.0s_LP_20250114-212621.fit  (+471 more)
icon/: ZSicon.icns
(+464 files in other folders)
